# personalaiassistant

./: .gitignore  .replit  README.md  mcp_agent.py  pyproject.toml  replit.md  requirements.txt  run.py  setup_ollama.sh  test_ollama.py
langgraph-agent/: README.md  pyproject.toml  requirements.txt
langgraph-agent/src/: main.py
langgraph-agent/src/agents/: __init__.py  base_agent.py
langgraph-agent/src/config/: config.py
langgraph-agent/src/graph/: __init__.py  state_manager.py
langgraph-agent/src/privacy/: privacy_manager.py
langgraph-agent/src/tools/: __init__.py  calendar_manager.py  email_manager.py  internet_search.py  pdf_reader.py  pizza_order.py  tool_registry.py
langgraph-agent/tests/: __init__.py  test_agents.py  test_tools.py
mcp_servers/: calendar_server.py  email_server.py  pdf_server.py  pizza_server.py  search_server.py
